adapted some files with pep8

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,8 +59,8 @@ testing =
 # console_scripts =
 #     script_name = garminmanager.module:function
 # For example:
-# console_scripts =
-#     fibonacci = garminmanager.skeleton:run
+console_scripts =
+     mystart = garminmanager.run:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -110,6 +110,12 @@ exclude =
     dist
     .eggs
     docs/conf.py
+
+[files]
+# Add here 'data_files', 'packages' or 'namespace_packages'.
+# Additional data files are defined as key value pairs of source and target:
+data_files =
+    setttings.json = settings.json
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
