--- a/setup.cfg
+++ b/setup.cfg
@@ -94,7 +94,7 @@ universal = 1
 
 [build_sphinx]
 source_dir = docs
-build_dir = docs/_build_docu
+build_dir = docs/_build
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
